--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,21 @@ target-version = ["py310"]
 
 [tool.isort]
 profile = "black"
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = [
+    "E203",  # Whitespace before ':'
+    "W503",  # Line break before binary operator
+    "E501",  # Line too long
+    "F403",  # 'from module import *' used
+    "F401",  # Unused imports
+]
+exclude = [
+    ".git",
+    "__pycache__",
+    "migrations",
+    "*.pyc",
+    ".venv",
+    "env"
+]
