--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,7 @@ repos:
       - id: flake8
         additional_dependencies:
           - flake8-pyproject    # Read configs from pyproject.yaml, not from setup.cfg
+-   repo: https://github.com/PyCQA/bandit
+    rev: '1.9.2'
+    hooks:
+    - id: bandit
